# cargo-env-issue

./: Cargo.toml  build.rs
.cargo/: config.toml
.github/workflows/: test.yml
